create: connect normalize.scss

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,6 +2,8 @@
 @import 'var'
 //подключение базовых настроек
 @import 'settings'
+//подключение normalize
+@import 'normalize'
 //стили для блока хедер
 @import 'tamplates/header'
   
