--- a/sass/tamplates/_header.sass
+++ b/sass/tamplates/_header.sass
@@ -8,6 +8,25 @@
     padding-bottom: 40px
   &__search 
     margin-left: 108px
+    margin-right: auto
+  &-bottom
+    background-color: $dark
+  &-menu
+    list-style-type: none
+    margin: 0
+    padding: 31px 0
+    display: flex
+    align-items: center
+    justify-content: space-between
+    &__link
+      color: inherit
+      text-decoration: none
+      text-transform: uppercase
+      font-weight: bold
+      font-size: 14px
+      line-height: 18px
+.logo 
+  width: 177px
 .search 
   display: flex
   position: relative
