--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,19 +4,48 @@
 @media (max-width: 992px)
   .container
     max-width: 700px
+  .logo
+    width: 132px
   .navbar
     &-top
       padding: 30px 0
     &__search
       margin-left: auto
-      max-width: 340px
     &-menu
       padding: 22px 0
       &__link
         font-weight: bold
         font-size: 12px
         line-height: 15px
+  .search
+    &__input
+      max-width: 340px
 @media (max-width: 768px)
   .container
     max-width: 576px
     width: 92%
+  .navbar
+    &__search, &-menu, &__user
+      display: none
+    &-top
+      padding: 28px 0
+  .menu
+    &-button
+      display: flex
+      flex-direction: column
+      width: 16px
+      height: 11px
+      align-items: center
+      justify-content: space-between
+      border: none
+      background-color: $light
+      cursor: pointer
+      padding: 0
+      &__line
+        width: 16px
+        height: 1px
+        background-color: $text-color
+@media ( max-width: 576px)
+  .logo
+    width: 99px
+  
