create: breadcrumb and hotel-info

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,5 +6,9 @@
 @import 'normalize'
 //стили для блока хедер
 @import 'tamplates/header'
+//стили для хлебных крошек
+@import 'tamplates/breadcrumb'
+//стили для блока с инфо об отеле
+@import 'tamplates/hotel'
 //подключение стилей для адаптива
 @import 'media'
