--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -40,10 +40,31 @@
       border: none
       background-color: $light
       cursor: pointer
+      &:focus
+        outline: none
       &__line
         width: 16px
         height: 1px
         background-color: $text-color
+  .hotel
+    &-wrapper
+      justify-content: space-between
+    &-info
+      &__rating
+        display: none
+      &__offer
+        order: -1
+        margin: 0
+      &__text
+        width: 100%
+      &__name
+        margin-top: 10px
+        margin-bottom: 0
+    &-name
+      flex-basis: 100%
+  .stars
+    flex-basis: auto
+  
 @media ( max-width: 576px)
   .logo
     width: 99px
