--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -23,7 +23,7 @@
 @media (max-width: 768px)
   .container
     max-width: 576px
-    width: 92%
+    width: 88%
   .navbar
     &__search, &-menu, &__user
       display: none
@@ -68,4 +68,7 @@
 @media ( max-width: 576px)
   .logo
     width: 99px
-  
+@media ( max-width: 480px)
+  .hotel
+    padding-top: 5px
+    padding-bottom: 20px
