--- a/sass/tamplates/_header.sass
+++ b/sass/tamplates/_header.sass
@@ -29,6 +29,9 @@
       line-height: 18px
 .logo 
   width: 177px
+  height: 24px
+  &__image
+    height: 100%
 .search 
   display: flex
   position: relative
