--- a/sass/tamplates/_hotel.sass
+++ b/sass/tamplates/_hotel.sass
@@ -7,12 +7,12 @@
     justify-content: space-between
     &__offer
       margin-left: 14px
-      margin-top: 4px
+      margin-top: 6px
     &__name
       margin-top: 4px
       margin-bottom: 0
     &__description
-      margin: 5px 0
+      margin: 1px 0
   &-name
     font-weight: bold
     font-size: 24px
@@ -26,6 +26,9 @@
     line-height: 15px
 .stars
   flex-basis: 100%
+.star 
+  float: left
+  margin-right: 2px
 .offer
   font-weight: 600
   font-size: 10px
