--- a/css/style.css
+++ b/css/style.css
@@ -524,6 +524,7 @@ template {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding-bottom: 20px;
 }
 
 .hotel-info__offer {
@@ -606,6 +607,57 @@ template {
 .rating__counter_size-big {
   font-size: 14px;
   line-height: 18px;
+}
+
+.slider {
+  width: 728px;
+}
+
+.swiper-container {
+  width: 100%;
+  height: 450px;
+  position: relative;
+  border-radius: 8px;
+}
+
+.swiper-container:after {
+  content: ' ';
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 122, 223, 0.48)), to(rgba(255, 255, 255, 0.128)));
+  background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
+  z-index: 80;
+}
+
+.slider-button {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  border: none;
+  width: 30px;
+  height: 30px;
+  z-index: 99;
+  cursor: pointer;
+  outline: none;
+  background-color: transparent;
+}
+
+.slider-button__next {
+  right: 18px;
+  background: url(../img/arrow-next.svg) no-repeat center;
+  background-size: 10px;
+}
+
+.slider-button__prev {
+  left: 16px;
+  background: url(../img/arrow-prev.svg) no-repeat center;
+  background-size: 10px;
 }
 
 @media (max-width: 1200px) {
