--- a/css/style.css
+++ b/css/style.css
@@ -572,7 +572,7 @@ template {
           justify-content: space-between;
 }
 
-.hotel-right {
+.block-info {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -633,11 +633,12 @@ template {
 
 .slider {
   width: 728px;
+  height: 450px;
 }
 
 .swiper-container {
   width: 100%;
-  height: 450px;
+  height: 100%;
   position: relative;
   border-radius: 8px;
 }
@@ -818,11 +819,22 @@ template {
 .map {
   width: 340px;
   height: 210px;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
+  }
+  .slider {
+    width: 590px;
+  }
+  .swiper-slide__img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 
@@ -849,6 +861,30 @@ template {
   }
   .search__input {
     max-width: 340px;
+  }
+  .hotel-grid {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hotel__slider {
+    margin-bottom: 30px;
+  }
+  .booking {
+    width: 340px;
+  }
+  .slider {
+    width: 100%;
+  }
+  .block-info {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .map {
+    width: 340px;
   }
 }
 
@@ -896,6 +932,9 @@ template {
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
+  .hotel-info {
+    margin-bottom: 15px;
+  }
   .hotel-info__rating {
     display: none;
   }
@@ -920,11 +959,33 @@ template {
     -ms-flex-preferred-size: auto;
         flex-basis: auto;
   }
+  .slider {
+    height: 320px;
+  }
+  .block-info {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    min-height: 400px;
+  }
+  .booking, .map {
+    width: 100%;
+  }
+  .map {
+    height: 170px;
+  }
 }
 
 @media (max-width: 576px) {
   .logo {
     width: 99px;
+  }
+  .slider {
+    height: 179px;
+  }
+  .hotel__slider {
+    margin-bottom: 20px;
   }
 }
 
