--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,6 +1,14 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
+  .slider
+    width: 590px
+  .swiper-slide
+    &__img
+      width: 100%
+      height: 100%
+      object-fit: cover
+
 @media (max-width: 992px)
   .container
     max-width: 700px
@@ -20,6 +28,20 @@
   .search
     &__input
       max-width: 340px
+  .hotel
+    &-grid
+      flex-direction: column
+    &__slider
+      margin-bottom: 30px
+  .booking
+    width: 340px
+  .slider
+    width: 100%
+  .block-info
+    flex-direction: row
+  .map
+    width: 340px
+   
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -50,6 +72,7 @@
     &-wrapper
       justify-content: space-between
     &-info
+      margin-bottom: 15px
       &__rating
         display: none
       &__offer
@@ -64,10 +87,24 @@
       flex-basis: 100%
   .stars
     flex-basis: auto
-  
+  .slider 
+    height: 320px
+  .block-info
+    flex-direction: column
+    min-height: 400px
+  .booking, .map
+    width: 100%
+  .map
+    height: 170px
+
 @media ( max-width: 576px)
   .logo
     width: 99px
+  .slider
+    height: 179px
+  .hotel
+    &__slider
+      margin-bottom: 20px
 @media ( max-width: 480px)
   .hotel
     padding-top: 5px
