--- a/sass/tamplates/_hotel.sass
+++ b/sass/tamplates/_hotel.sass
@@ -28,10 +28,10 @@
   &-grid
     display: flex
     justify-content: space-between
-  &-right
-    display: flex
-    flex-direction: column
-    justify-content: space-between
+.block-info
+  display: flex
+  flex-direction: column
+  justify-content: space-between
 .stars
   flex-basis: 100%
 .star 
@@ -65,9 +65,10 @@
       line-height: 18px
 .slider
   width: 728px
+  height: 450px
 .swiper-container
   width: 100%
-  height: 450px
+  height: 100%
   position: relative
   border-radius: 8px
   &:after
@@ -192,4 +193,5 @@
 .map
   width: 340px
   height: 210px
-
+  border-radius: 10px
+  overflow: hidden
