create: added newsletter & responsive

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,7 @@
 @import 'tamplates/breadcrumb'
 //стили для блока с инфо об отеле
 @import 'tamplates/hotel'
+//подключение стилей для блока с подпиской
+@import 'tamplates/newsletter'
 //подключение стилей для адаптива
 @import 'media'
