--- a/css/style.css
+++ b/css/style.css
@@ -572,6 +572,11 @@ template {
           justify-content: space-between;
 }
 
+.hotel__slider {
+  width: 728px;
+  height: 450px;
+}
+
 .block-info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -629,11 +634,6 @@ template {
 .rating__counter_size-big {
   font-size: 14px;
   line-height: 18px;
-}
-
-.slider {
-  width: 728px;
-  height: 450px;
 }
 
 .swiper-container {
@@ -823,11 +823,100 @@ template {
   overflow: hidden;
 }
 
+.newsletter {
+  position: relative;
+  padding-top: 98px;
+  padding-bottom: 87px;
+  background-image: url(../img/newletter-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.newsletter::before {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(10, 34, 61, 0.8);
+}
+
+.newsletter-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
+  max-width: 731px;
+  margin: auto;
+}
+
+.newsletter-title {
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 30px;
+  margin: 0;
+}
+
+.newsletter-title__strong {
+  display: block;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 45px;
+  text-transform: uppercase;
+}
+
+.subscribe {
+  position: relative;
+  width: 350px;
+  height: 55px;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.subscribe__input {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding-left: 33px;
+  padding-right: 75px;
+  border: none;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 18px;
+  color: #BDBDBD;
+}
+
+.subscribe__button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  min-width: 65px;
+  border: none;
+  background-color: #EC1F46;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  color: #ffffff;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
   }
-  .slider {
+  .hotel__slider {
     width: 590px;
   }
   .swiper-slide__img {
@@ -835,6 +924,7 @@ template {
     height: 100%;
     -o-object-fit: cover;
        object-fit: cover;
+    max-width: 700px;
   }
 }
 
@@ -862,6 +952,9 @@ template {
   .search__input {
     max-width: 340px;
   }
+  .hotel {
+    padding-bottom: 60px;
+  }
   .hotel-grid {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -885,6 +978,13 @@ template {
   }
   .map {
     width: 340px;
+  }
+  .newsletter {
+    padding-top: 92px;
+    padding-bottom: 93px;
+  }
+  .newsletter-wrapper {
+    max-width: 700px;
   }
 }
 
@@ -926,6 +1026,10 @@ template {
     width: 16px;
     height: 1px;
     background-color: #333333;
+  }
+  .hotel {
+    padding-top: 5px;
+    padding-bottom: 44px;
   }
   .hotel-wrapper {
     -webkit-box-pack: justify;
@@ -975,6 +1079,33 @@ template {
   .map {
     height: 170px;
   }
+  .newsletter {
+    padding-top: 76px;
+    padding-bottom: 83px;
+  }
+  .newsletter-title {
+    font-size: 20px;
+    line-height: 25px;
+  }
+  .newsletter-title__strong {
+    font-size: 30px;
+    line-height: 46px;
+  }
+  .newsletter-wrapper {
+    min-height: 160px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    max-width: 576px;
+    width: 88%;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .subscribe {
+    width: 100%;
+  }
 }
 
 @media (max-width: 576px) {
@@ -986,13 +1117,6 @@ template {
   }
   .hotel__slider {
     margin-bottom: 20px;
-  }
-}
-
-@media (max-width: 480px) {
-  .hotel {
-    padding-top: 5px;
-    padding-bottom: 20px;
   }
 }
 /*# sourceMappingURL=style.css.map */
