--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,13 +1,15 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
-  .slider
-    width: 590px
+  .hotel
+    &__slider
+      width: 590px
   .swiper-slide
     &__img
       width: 100%
       height: 100%
       object-fit: cover
+      max-width: 700px
 
 @media (max-width: 992px)
   .container
@@ -29,6 +31,7 @@
     &__input
       max-width: 340px
   .hotel
+    padding-bottom: 60px
     &-grid
       flex-direction: column
     &__slider
@@ -41,6 +44,11 @@
     flex-direction: row
   .map
     width: 340px
+  .newsletter
+    padding-top: 92px
+    padding-bottom: 93px
+    &-wrapper
+      max-width: 700px
    
 @media (max-width: 768px)
   .container
@@ -69,6 +77,8 @@
         height: 1px
         background-color: $text-color
   .hotel
+    padding-top: 5px
+    padding-bottom: 44px
     &-wrapper
       justify-content: space-between
     &-info
@@ -96,6 +106,23 @@
     width: 100%
   .map
     height: 170px
+  .newsletter
+    padding-top: 76px
+    padding-bottom: 83px
+    &-title
+      font-size: 20px
+      line-height: 25px
+      &__strong
+        font-size: 30px
+        line-height: 46px
+    &-wrapper
+      min-height: 160px
+      flex-direction: column
+      max-width: 576px
+      width: 88%
+      align-items: flex-start
+  .subscribe
+    width: 100%
 
 @media ( max-width: 576px)
   .logo
@@ -105,7 +132,5 @@
   .hotel
     &__slider
       margin-bottom: 20px
-@media ( max-width: 480px)
-  .hotel
-    padding-top: 5px
-    padding-bottom: 20px
+
+  
