--- a/sass/tamplates/_hotel.sass
+++ b/sass/tamplates/_hotel.sass
@@ -28,6 +28,9 @@
   &-grid
     display: flex
     justify-content: space-between
+  &__slider
+    width: 728px
+    height: 450px
 .block-info
   display: flex
   flex-direction: column
@@ -63,9 +66,6 @@
     &_size-big
       font-size: 14px
       line-height: 18px
-.slider
-  width: 728px
-  height: 450px
 .swiper-container
   width: 100%
   height: 100%
