create: added reviews section & fixed hotel slider

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,5 +12,7 @@
 @import 'tamplates/hotel'
 //подключение стилей для блока с подпиской
 @import 'tamplates/newsletter'
+//подключение стилей для блока c отзывами
+@import 'tamplates/reviews'
 //подключение стилей для адаптива
 @import 'media'
