--- a/sass/tamplates/_hotel.sass
+++ b/sass/tamplates/_hotel.sass
@@ -28,9 +28,46 @@
   &-grid
     display: flex
     justify-content: space-between
-  &__slider
+  &-slider 
     width: 728px
     height: 450px
+    margin: 0
+    &__item
+      width: 100%
+      height: 100%
+      position: relative
+      border-radius: 8px
+      overflow: hidden
+      &:after
+        content: ' '
+        position: absolute
+        left: 0
+        right: 0
+        bottom: 0
+        top: 0
+        width: 100%
+        height: 100%
+        background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
+        z-index: 80
+    &__button
+      position: absolute
+      top: 50%
+      transform: translateY(-50%)
+      border: none
+      width: 30px
+      height: 30px
+      z-index: 99
+      cursor: pointer
+      outline: none
+      background-color: transparent
+      &__next
+        right: 18px
+        background: url(../img/arrow-next.svg) no-repeat center
+        background-size: 10px
+      &__prev
+        left: 16px
+        background: url(../img/arrow-prev.svg) no-repeat center
+        background-size: 10px
 .block-info
   display: flex
   flex-direction: column
@@ -66,42 +103,6 @@
     &_size-big
       font-size: 14px
       line-height: 18px
-.swiper-container
-  width: 100%
-  height: 100%
-  position: relative
-  border-radius: 8px
-  &:after
-    content: ' '
-    position: absolute
-    left: 0
-    right: 0
-    bottom: 0
-    top: 0
-    width: 100%
-    height: 100%
-    background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
-    z-index: 80
-.slider 
-  &-button
-    position: absolute
-    top: 50%
-    transform: translateY(-50%)
-    border: none
-    width: 30px
-    height: 30px
-    z-index: 99
-    cursor: pointer
-    outline: none
-    background-color: transparent
-    &__next
-      right: 18px
-      background: url(../img/arrow-next.svg) no-repeat center
-      background-size: 10px
-    &__prev
-      left: 16px
-      background: url(../img/arrow-prev.svg) no-repeat center
-      background-size: 10px
 .booking
   width: 350px
   height: 210px
