--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -36,10 +36,12 @@
       flex-direction: column
     &__slider
       margin-bottom: 30px
+    &-slider
+      height: 450px
+      width: 100%
+
   .booking
     width: 340px
-  .slider
-    width: 100%
   .block-info
     flex-direction: row
   .map
@@ -49,11 +51,20 @@
     padding-bottom: 93px
     &-wrapper
       max-width: 700px
-   
+  .reviews
+    &-slider
+      &__item
+        max-width: 579px
+      &__text
+        max-width: 455px
+    &__title 
+      font-size: 30px
+      line-height: 38px
+      margin-bottom: 50px
 @media (max-width: 768px)
   .container
     max-width: 576px
-    width: 88%
+    width: 85%
   .navbar
     &__search, &-menu, &__user
       display: none
@@ -95,10 +106,10 @@
         margin-bottom: 0
     &-name
       flex-basis: 100%
+    &-slider
+      height: 179px
   .stars
     flex-basis: auto
-  .slider 
-    height: 320px
   .block-info
     flex-direction: column
     min-height: 400px
@@ -123,7 +134,28 @@
       align-items: flex-start
   .subscribe
     width: 100%
-
+  .reviews
+    &-slider
+      &__item
+        padding: 0 30px 30px
+        &:after, &::before
+          display: none
+      &__button
+        top: 32px
+        &__prev
+          left: 50%
+          transform: translateX(-50%)
+          margin-left: -90px
+        &__next
+          right: 50%
+          transform: translateX(50%)
+          margin-right: -90px
+      &__text
+        max-width: 455px
+    &__title
+      font-size: 18px
+      line-height: 23px
+      margin-bottom: 42px
 @media ( max-width: 576px)
   .logo
     width: 99px
