--- a/sass/tamplates/_reviews.sass
+++ b/sass/tamplates/_reviews.sass
@@ -14,7 +14,7 @@
     &__item
       display: flex
       position: relative
-      width: 730px
+      max-width: 730px
       margin: 45px auto 0
       background-color: #ffffff
       flex-direction: column
@@ -41,7 +41,7 @@
         background-repeat: no-repeat
     &__button
       position: absolute
-      top: 47%
+      top: 50%
       transform: translateY(-50%)
       width: 30px
       height: 30px
@@ -54,10 +54,10 @@
       z-index: 99
       &__prev
         background-image: url(../img/arrow-prev-secondary.svg)
-        left: 20px        
+        left: 0px        
       &__next
         background-image: url(../img/arrow-next-secondary.svg)
-        right: 20px
+        right: 0px
     &__profile
       display: flex
       flex-direction: column
