--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,12 +4,12 @@
   .hotel
     &__slider
       width: 590px
-  .swiper-slide
-    &__img
-      width: 100%
-      height: 100%
-      object-fit: cover
-      max-width: 700px
+      &-slide
+        &__img
+          width: 100%
+          height: 100%
+          object-fit: cover
+          max-width: 700px
 
 @media (max-width: 992px)
   .container
