--- a/sass/tamplates/_newsletter.sass
+++ b/sass/tamplates/_newsletter.sass
@@ -54,7 +54,7 @@
     top: 0
     right: 0
     height: 100%
-    min-width: 65px
+    width: 65px
     border: none
     background-color: $primary
     font-weight: bold
