create: added activities section

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,5 +14,7 @@
 @import 'tamplates/newsletter'
 //подключение стилей для блока c отзывами
 @import 'tamplates/reviews'
+//подключение стилей для блока c развлечениями
+@import 'tamplates/activities'
 //подключение стилей для адаптива
 @import 'media'
