--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,6 +10,9 @@
           height: 100%
           object-fit: cover
           max-width: 700px
+  .card
+    width: 230px
+    height: 230px
 
 @media (max-width: 992px)
   .container
@@ -52,6 +55,7 @@
     &-wrapper
       max-width: 700px
   .reviews
+    padding-bottom: 60px
     &-slider
       &__item
         max-width: 579px
@@ -61,6 +65,16 @@
       font-size: 30px
       line-height: 38px
       margin-bottom: 50px
+  .activities
+    padding-bottom: 50px
+    &-wrapper
+      flex-wrap: wrap
+    &__card
+      margin-bottom: 20px
+  .card
+    width: 339px
+    height: 255px
+    padding: 24px 110px 24px 26px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -135,6 +149,7 @@
   .subscribe
     width: 100%
   .reviews
+    padding-bottom: 50px
     &-slider
       &__item
         padding: 0 30px 30px
@@ -156,6 +171,19 @@
       font-size: 18px
       line-height: 23px
       margin-bottom: 42px
+  .activities
+    padding-top: 40px 
+    padding-bottom: 60px
+    &__title
+      font-size: 18px
+      line-height: 23px
+    &-wrapper
+      justify-content: center
+    &__title
+      margin-bottom: 36px
+  .card
+    width: 100%
+    padding-right: 45px
 @media ( max-width: 576px)
   .logo
     width: 99px
