--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,6 +10,8 @@
 @import 'tamplates/breadcrumb'
 //стили для блока с инфо об отеле
 @import 'tamplates/hotel'
+//подключение стилей для блока с другими предложениями
+@import 'tamplates/packages'
 //подключение стилей для блока с подпиской
 @import 'tamplates/newsletter'
 //подключение стилей для блока c отзывами
