--- a/sass/tamplates/_reviews.sass
+++ b/sass/tamplates/_reviews.sass
@@ -52,12 +52,13 @@
       border: none
       cursor: pointer
       z-index: 99
+      outline: none
       &__prev
         background-image: url(../img/arrow-prev-secondary.svg)
-        left: 0px        
+        left: 17px        
       &__next
         background-image: url(../img/arrow-next-secondary.svg)
-        right: 0px
+        right: 17px
     &__profile
       display: flex
       flex-direction: column
