--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,18 +5,20 @@
 //подключение normalize
 @import 'normalize'
 //стили для блока хедер
-@import 'tamplates/header'
+@import 'templates/header'
 //стили для хлебных крошек
-@import 'tamplates/breadcrumb'
+@import 'templates/breadcrumb'
 //стили для блока с инфо об отеле
-@import 'tamplates/hotel'
+@import 'templates/hotel'
 //подключение стилей для блока с другими предложениями
-@import 'tamplates/packages'
+@import 'templates/packages'
 //подключение стилей для блока с подпиской
-@import 'tamplates/newsletter'
+@import 'templates/newsletter'
 //подключение стилей для блока c отзывами
-@import 'tamplates/reviews'
+@import 'templates/reviews'
 //подключение стилей для блока c развлечениями
-@import 'tamplates/activities'
+@import 'templates/activities'
+//подключение стилей для подвала
+@import 'templates/footer'
 //подключение стилей для адаптива
 @import 'media'
