--- a/css/style.css
+++ b/css/style.css
@@ -1196,7 +1196,7 @@ template {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0 62px 30px;
+  padding: 0 62px 37px;
 }
 
 .reviews-slider__item::before {
@@ -1407,6 +1407,273 @@ template {
   cursor: pointer;
 }
 
+.footer {
+  background-color: #0A223D;
+  color: #ffffff;
+  padding-top: 108px;
+  padding-bottom: 94px;
+}
+
+.footer-wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 24% 24% 29% 18%;
+      grid-template-columns: 24% 24% 29% 18%;
+  grid-auto-rows: minmax(37px, -webkit-min-content);
+  grid-auto-rows: minmax(37px, min-content);
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  grid-gap: 20px;
+}
+
+.footer__logo {
+  max-width: 155px;
+  height: auto;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.footer__categories {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  grid-row: 1 / 4;
+}
+
+.footer__social-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 83px;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__social-links::before:first-child {
+  content: url(../img/facebook.svg);
+}
+
+.footer__social-network {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2 / 4;
+  grid-column: span 2;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__contact-details {
+  grid-column: span 2;
+}
+
+.footer__contact-form {
+  grid-column: span 2;
+}
+
+.footer-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.footer__ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.footer__item {
+  position: relative;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 160%;
+  color: #BDBDBD;
+}
+
+.footer__item_extra {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  color: #ffffff;
+}
+
+.footer__information {
+  padding-left: 40px;
+  margin-bottom: 22px;
+}
+
+.footer__information_map::before {
+  content: url(../img/map-marker.svg);
+  position: absolute;
+  top: 0;
+  left: 5px;
+  width: 18px;
+}
+
+.footer__information_call::before {
+  content: url(../img/contact-phone-call.svg);
+  position: absolute;
+  top: 0;
+  left: 5px;
+  width: 18px;
+}
+
+.footer__information_email::before {
+  content: url(../img/email.svg);
+  position: absolute;
+  top: 0;
+  left: 5px;
+  width: 18px;
+}
+
+.footer__text {
+  position: relative;
+  color: #BDBDBD;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 160%;
+  margin-bottom: 23px;
+}
+
+.footer__link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.footer__title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  margin-top: 0;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+
+.footer__title_send {
+  margin-bottom: 34px;
+}
+
+.footer__title_contact {
+  margin: 13px 0 23px;
+}
+
+.footer__title_inline {
+  margin: 0 43px 0 0;
+}
+
+.footer__input {
+  background: #ffffff;
+  border-radius: 4px;
+  border: none;
+  padding: 0 23px;
+  height: 50px;
+  margin-bottom: 15px;
+  -ms-flex-preferred-size: 47%;
+      flex-basis: 47%;
+}
+
+.footer__message {
+  resize: none;
+  border-radius: 4px;
+  border: none;
+  padding: 18px 23px;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  margin-bottom: 23px;
+  height: 125px;
+}
+
+.footer__button {
+  min-width: 160px;
+  min-height: 50px;
+  padding: 18px 65px;
+  border-radius: 4px;
+  border: none;
+  outline: none;
+  background-color: #EC1F46;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  color: #ffffff;
+}
+
+.footer__info {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.footer__extra {
+  grid-row: span 2;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2 / 4;
+  margin: 0;
+  padding: 0;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-item-align: self-end;
+      align-self: self-end;
+}
+
+.action {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+}
+
+.pay {
+  grid-row: span 2;
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 1;
+  grid-column: 4 / 5;
+  -ms-grid-column-align: right;
+      justify-self: right;
+  -ms-flex-item-align: self-end;
+      -ms-grid-row-align: self-end;
+      align-self: self-end;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
@@ -1428,6 +1695,10 @@ template {
   .packages-wrapper {
     -ms-grid-rows: (500px)[3];
         grid-template-rows: repeat(3, 500px);
+  }
+  .footer__input {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
   }
 }
 
@@ -1518,6 +1789,83 @@ template {
     width: 339px;
     height: 255px;
     padding: 24px 110px 24px 26px;
+  }
+  .footer {
+    padding: 73px 0 33px 0;
+  }
+  .footer-wrapper {
+    -ms-grid-columns: (1fr)[12];
+        grid-template-columns: repeat(12, 1fr);
+    grid-row-gap: 50px;
+    grid-column-gap: 15px;
+  }
+  .footer__logo {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    grid-column: span 3;
+    width: 96px;
+  }
+  .footer__title_send {
+    margin-bottom: 36px;
+    margin-top: -13px;
+  }
+  .footer__social-network {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    grid-column: span 9;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    margin-top: 16px;
+  }
+  .footer__categories {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+    grid-column: span 3;
+  }
+  .footer__contact-details {
+    -ms-grid-row: 3;
+    grid-row: 3;
+    grid-column: span 9;
+  }
+  .footer__contact-form {
+    -ms-grid-row: 4;
+    grid-row: 4;
+    grid-column: span 9;
+  }
+  .footer__additional {
+    grid-column: span 5;
+    -ms-grid-column-align: center;
+        justify-self: center;
+  }
+  .footer__legal {
+    grid-column: span 4;
+    -ms-grid-column-align: center;
+        justify-self: center;
+  }
+  .footer__extra {
+    grid-column: span 6;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
+    grid-row: 5/6;
+  }
+  .footer__input {
+    -ms-flex-preferred-size: 48%;
+        flex-basis: 48%;
+  }
+  .pay {
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
+    grid-row: 5/6;
+    grid-column: span 6;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
   }
 }
 
@@ -1672,8 +2020,8 @@ template {
     margin-bottom: 42px;
   }
   .activities {
-    padding-top: 40px;
-    padding-bottom: 60px;
+    padding-top: 34px;
+    padding-bottom: 48px;
   }
   .activities__title {
     font-size: 18px;
@@ -1753,6 +2101,19 @@ template {
     padding-bottom: 25px;
     padding-left: 32px;
   }
+  .footer__input {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+  .footer__extra {
+    grid-column: span 8;
+    -ms-flex-item-align: start;
+        -ms-grid-row-align: start;
+        align-self: start;
+  }
+  .pay {
+    grid-column: span 4;
+  }
 }
 
 @media (max-width: 576px) {
@@ -1786,6 +2147,117 @@ template {
   .first__title {
     margin-top: 0;
     margin-bottom: 20px;
+  }
+  .footer {
+    padding: 69px 0 21px 0;
+  }
+  .footer-wrapper {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    grid-row-gap: 30px;
+  }
+  .footer__logo {
+    -ms-grid-row: 1;
+    grid-row: 1;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__social-network {
+    -ms-grid-row: 2;
+    grid-row: 2;
+    grid-column: span 2;
+    margin-top: 10px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .footer__title {
+    margin-bottom: 16px;
+  }
+  .footer__title_inline {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    margin-bottom: 20px;
+    margin-right: 0;
+  }
+  .footer__title_contact {
+    margin: 15px 0 24px;
+  }
+  .footer__title_send {
+    margin-top: 7px;
+  }
+  .footer__additional {
+    -ms-grid-row: 4;
+    grid-row: 4;
+    grid-column: span 2;
+    -ms-grid-column-align: self-start;
+        justify-self: self-start;
+  }
+  .footer__categories {
+    -ms-grid-row: 5;
+    grid-row: 5;
+    grid-column: span 2;
+  }
+  .footer__legal {
+    -ms-grid-row: 3;
+    grid-row: 3;
+    grid-column: span 2;
+    -ms-grid-column-align: start;
+        justify-self: start;
+  }
+  .footer__contact-details {
+    -ms-grid-row: 6;
+    grid-row: 6;
+    grid-column: span 2;
+  }
+  .footer__contact-form {
+    -ms-grid-row: 7;
+    grid-row: 7;
+    grid-column: span 2;
+  }
+  .footer__text {
+    margin-bottom: 20px;
+  }
+  .footer__extra {
+    -ms-grid-row: 8;
+    grid-row: 8;
+    grid-column: span 2;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-item-align: self-start;
+        -ms-grid-row-align: self-start;
+        align-self: self-start;
+  }
+  .footer__info {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    margin-bottom: 15px;
+  }
+  .footer_information {
+    padding-left: 30px;
+  }
+  .footer__message {
+    margin-bottom: 13px;
+  }
+  .pay {
+    -ms-grid-row: 9;
+    grid-row: 9;
+    grid-column: span 2;
+    -ms-grid-column-align: start;
+        justify-self: start;
+    -ms-flex-item-align: start;
+        -ms-grid-row-align: start;
+        align-self: start;
+  }
+  .action {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
 }
 
