create: add mobile menu

--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -1,5 +1,7 @@
 .navbar
-  color: #fff
+  color: $light
+  background-color: $light
+  
   &-top 
     display: flex
     align-items: center
@@ -27,6 +29,10 @@
       font-weight: bold
       font-size: 14px
       line-height: 18px
+    &__item
+      &_mobile
+        &_visible
+          display: none
 .logo 
   width: 177px
   height: 24px
