--- a/css/style.css
+++ b/css/style.css
@@ -363,7 +363,8 @@ template {
 }
 
 .navbar {
-  color: #fff;
+  color: #ffffff;
+  background-color: #ffffff;
 }
 
 .navbar-top {
@@ -415,6 +416,10 @@ template {
   font-weight: bold;
   font-size: 14px;
   line-height: 18px;
+}
+
+.navbar-menu__item_mobile_visible {
+  display: none;
 }
 
 .logo {
@@ -1716,7 +1721,7 @@ template {
     margin-left: auto;
   }
   .navbar-menu {
-    padding: 22px 0;
+    padding: 0;
   }
   .navbar-menu__link {
     font-weight: bold;
@@ -1870,12 +1875,60 @@ template {
 }
 
 @media (max-width: 768px) {
+  body {
+    padding-top: 78px;
+  }
   .container {
     max-width: 576px;
     width: 85%;
   }
-  .navbar__search, .navbar-menu, .navbar__user {
+  .navbar__search_mobile_hidden, .navbar__user_mobile_hidden {
     display: none;
+  }
+  .navbar__search_mobile_visible, .navbar__user_mobile_visible {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .navbar__user {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .navbar-bottom {
+    display: none;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    top: 78px;
+    padding: 31px 0 38px;
+  }
+  .navbar-bottom_visible {
+    display: block;
+  }
+  .navbar-menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .navbar-menu__item {
+    margin-bottom: 20px;
+  }
+  .navbar-menu__item_mobile_visible {
+    display: block;
+  }
+  .navbar_mobile_fixed {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    z-index: 99;
   }
   .navbar-top {
     padding: 28px 0;
@@ -1907,6 +1960,11 @@ template {
     width: 16px;
     height: 1px;
     background-color: #333333;
+  }
+  .user__name_light {
+    color: #ffffff;
+    margin-left: 0;
+    margin-top: 10px;
   }
   .hotel {
     padding-top: 5px;
@@ -2274,6 +2332,18 @@ template {
     padding-right: 21px;
     padding-bottom: 15px;
     padding-left: 18px;
+  }
+  .navbar-menu__item {
+    margin-bottom: 18px;
+  }
+  .navbar-menu__item_mobile_visible {
+    margin-bottom: 29px;
+  }
+  .navbar__user_mobile_visible, .navbar $__search_mobile_visible {
+    margin-bottom: 12px;
+  }
+  .navbar__search_mobile_visible {
+    max-width: 243px;
   }
 }
 /*# sourceMappingURL=style.css.map */
