--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -30,7 +30,7 @@
     &__search
       margin-left: auto
     &-menu
-      padding: 22px 0
+      padding: 0
       &__link
         font-weight: bold
         font-size: 12px
@@ -129,12 +129,45 @@
     grid-column: span 6
     align-self: flex-start
 @media (max-width: 768px)
+  body
+    padding-top: 78px
   .container
     max-width: 576px
     width: 85%
   .navbar
-    &__search, &-menu, &__user
+    &__search, &__user
+      &_mobile
+        &_hidden
+          display: none
+        &_visible
+          display: flex
+    &__user
+      flex-direction: column
+      justify-content: center
+    &-bottom
       display: none
+      position: fixed
+      left: 0
+      bottom: 0
+      right: 0
+      top: 78px
+      padding: 31px 0 38px
+      &_visible
+        display: block
+    &-menu
+      flex-direction: column
+      &__item
+        margin-bottom: 20px
+        &_mobile
+          &_visible
+            display: block
+    &_mobile
+      &_fixed
+        position: fixed
+        left: 0
+        top: 0
+        right: 0
+        z-index: 99
     &-top
       padding: 28px 0
   .menu
@@ -154,6 +187,12 @@
         width: 16px
         height: 1px
         background-color: $text-color
+  .user
+    &__name
+      &_light
+        color: $light
+        margin-left: 0
+        margin-top: 10px
   .hotel
     padding-top: 5px
     padding-bottom: 44px
@@ -388,4 +427,18 @@
         padding-right: 21px
         padding-bottom: 15px
         padding-left: 18px
-  
+  .navbar
+    &-menu
+      &__item    
+        margin-bottom: 18px
+        &_mobile
+          &_visible
+            margin-bottom: 29px
+    &__user, $__search
+      &_mobile
+        &_visible
+          margin-bottom: 12px
+    &__search
+      &_mobile
+        &_visible
+          max-width: 243px
