create: add modal-form

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -29,8 +29,6 @@
       padding: 30px 0
     &__search
       margin-left: auto
-    &-menu
-      padding: 0
       &__link
         font-weight: bold
         font-size: 12px
@@ -128,6 +126,13 @@
     grid-row: 5/6
     grid-column: span 6
     align-self: flex-start
+  .modal
+    &-action
+      flex-direction: column
+    &__button
+      margin-bottom: 15px
+    &__dialog
+      padding: 25px 40px
 @media (max-width: 768px)
   body
     padding-top: 78px
@@ -415,6 +420,9 @@
   .action 
     flex-direction: column
     align-items: flex-start
+  .modal
+    &__dialog 
+      padding: 15px 20px
 @media (max-width: 480px)
   .packages
     &-wrapper
@@ -442,3 +450,9 @@
       &_mobile
         &_visible
           max-width: 243px
+  .booking
+    &__button
+      padding: 13px 40px
+  .modal
+    &__message
+      min-height: 80px
