--- a/sass/style.sass
+++ b/sass/style.sass
@@ -20,5 +20,9 @@
 @import 'templates/activities'
 //подключение стилей для подвала
 @import 'templates/footer'
+//подключение стилей для блока c развлечениями
+@import 'templates/thanckyou'
+//подключение стилей для блока cо всплывающей формой
+@import 'templates/modal'
 //подключение стилей для адаптива
 @import 'media'
