--- a/sass/templates/_newsletter.sass
+++ b/sass/templates/_newsletter.sass
@@ -49,7 +49,6 @@
     font-weight: 300
     font-size: 14px
     line-height: 18px
-    color: $grey
   &__button
     position: absolute
     top: 0
@@ -62,4 +61,5 @@
     font-size: 12px
     line-height: 15px
     color: $light
+    cursor: pointer
     
