--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,51 @@ img {
   max-width: 100%;
 }
 
+.input {
+  background: #ffffff;
+  border-radius: 4px;
+  border: none;
+  padding: 0 23px;
+  height: 50px;
+}
+
+.message {
+  resize: none;
+  border-radius: 4px;
+  border: none;
+  padding: 18px 23px;
+}
+
+.button {
+  min-width: 160px;
+  min-height: 50px;
+  padding: 18px 65px;
+  border-radius: 4px;
+  border: none;
+  outline: none;
+  background-color: #EC1F46;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -816,11 +861,6 @@ template {
   font-weight: 600;
   font-size: 14px;
   line-height: 19px;
-  background-color: #EC1F46;
-  border: none;
-  border-radius: 4px;
-  color: inherit;
-  cursor: pointer;
 }
 
 .map {
@@ -1151,7 +1191,6 @@ template {
   font-weight: 300;
   font-size: 14px;
   line-height: 18px;
-  color: #BDBDBD;
 }
 
 .subscribe__button {
@@ -1166,6 +1205,7 @@ template {
   font-size: 12px;
   line-height: 15px;
   color: #ffffff;
+  cursor: pointer;
 }
 
 .reviews {
@@ -1487,20 +1527,6 @@ template {
   grid-column: span 2;
 }
 
-.footer-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
 .footer__ul {
   padding: 0;
   margin: 0;
@@ -1591,41 +1617,16 @@ template {
 }
 
 .footer__input {
-  background: #ffffff;
-  border-radius: 4px;
-  border: none;
-  padding: 0 23px;
-  height: 50px;
   margin-bottom: 15px;
   -ms-flex-preferred-size: 47%;
       flex-basis: 47%;
 }
 
 .footer__message {
-  resize: none;
-  border-radius: 4px;
-  border: none;
-  padding: 18px 23px;
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
   margin-bottom: 23px;
   height: 125px;
-}
-
-.footer__button {
-  min-width: 160px;
-  min-height: 50px;
-  padding: 18px 65px;
-  border-radius: 4px;
-  border: none;
-  outline: none;
-  background-color: #EC1F46;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 15px;
-  color: #ffffff;
-  cursor: pointer;
 }
 
 .footer__info {
@@ -1679,6 +1680,104 @@ template {
       align-self: self-end;
 }
 
+.button__send {
+  background-color: #EC1F46;
+  border: none;
+  border-radius: 4px;
+  padding: 5px 20px;
+  outline: none;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.link {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  color: #ffffff;
+}
+
+.modal__overlay {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  background-color: rgba(0, 143, 223, 0.39);
+  z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+}
+
+.modal__overlay_visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  padding: 33px 88px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background-color: #0A223D;
+  color: #ffffff;
+  border-radius: 8px;
+  z-index: 101;
+  max-width: 478px;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+}
+
+.modal__dialog_visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__close {
+  position: absolute;
+  top: 17px;
+  right: 18px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal__title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  margin-top: 0;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.modal__input {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.modal__message {
+  min-height: 123px;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.modal__info {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
@@ -1720,10 +1819,7 @@ template {
   .navbar__search {
     margin-left: auto;
   }
-  .navbar-menu {
-    padding: 0;
-  }
-  .navbar-menu__link {
+  .navbar__search__link {
     font-weight: bold;
     font-size: 12px;
     line-height: 15px;
@@ -1871,6 +1967,18 @@ template {
     grid-column: span 6;
     -ms-flex-item-align: start;
         align-self: flex-start;
+  }
+  .modal-action {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .modal__button {
+    margin-bottom: 15px;
+  }
+  .modal__dialog {
+    padding: 25px 40px;
   }
 }
 
@@ -2317,6 +2425,9 @@ template {
         -ms-flex-align: start;
             align-items: flex-start;
   }
+  .modal__dialog {
+    padding: 15px 20px;
+  }
 }
 
 @media (max-width: 480px) {
@@ -2344,6 +2455,12 @@ template {
   }
   .navbar__search_mobile_visible {
     max-width: 243px;
+  }
+  .booking__button {
+    padding: 13px 40px;
+  }
+  .modal__message {
+    min-height: 80px;
   }
 }
 /*# sourceMappingURL=style.css.map */
