--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -9,4 +9,33 @@ body
   margin: auto
 img
   max-width: 100%
-
+.input
+  background: $light
+  border-radius: 4px
+  border: none
+  padding: 0 23px
+  height: 50px
+.message
+  resize: none
+  border-radius: 4px
+  border: none
+  padding: 18px 23px
+.button
+  min-width: 160px
+  min-height: 50px
+  padding: 18px 65px
+  border-radius: 4px
+  border: none
+  outline: none
+  background-color: $primary
+  font-style: normal
+  font-weight: bold
+  font-size: 12px
+  line-height: 15px
+  color: $light
+  cursor: pointer
+.form
+  display: flex
+  align-items: center
+  justify-content: space-between
+  flex-wrap: wrap
