--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -1,10 +1,10 @@
 *
   box-sizing: border-box
-body 
+body
   font-family: 'Mulish', serif
   color: $text-color
   background-color: $secondary
-.container 
+.container
   max-width: 1110px
   margin: auto
 img
@@ -39,3 +39,15 @@ img
   align-items: center
   justify-content: space-between
   flex-wrap: wrap
+input.invalid
+  border: 1px solid $primary
+label.invalid
+  color: $primary
+  text-decoration: underline
+  position: absolute
+  top: 33px
+  left: 22px
+  font-size: 12px
+  font-weight: 700
+  overflow: auto
+  height: 15px
