--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -47,12 +47,15 @@
     text-align: center
   &__input
     width: 100%
-    margin-bottom: 15px
+    &-group
+      width: 100%
+      margin-top: 15px
+      position: relative
   &__message
     min-height: 123px
     width: 100%
-    margin-bottom: 15px
-    height: 
+    margin: 15px 0
+    height:
   &__info
     font-style: normal
     font-weight: bold
