--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,22 @@ img {
       flex-wrap: wrap;
 }
 
+input.invalid {
+  border: 1px solid #EC1F46;
+}
+
+label.invalid {
+  color: #EC1F46;
+  text-decoration: underline;
+  position: absolute;
+  top: 33px;
+  left: 22px;
+  font-size: 12px;
+  font-weight: 700;
+  overflow: auto;
+  height: 15px;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -495,6 +511,7 @@ template {
   font-size: 12px;
   line-height: 15px;
   color: #333333;
+  outline: none;
 }
 
 .search__button {
@@ -864,10 +881,11 @@ template {
 }
 
 .map {
-  width: 340px;
+  width: 100%;
   height: 210px;
   border-radius: 10px;
   overflow: hidden;
+  border: none;
 }
 
 .packages {
@@ -1101,7 +1119,7 @@ template {
   display: block;
   margin-top: 0;
   margin-bottom: 41px;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .first__person {
@@ -1182,11 +1200,16 @@ template {
 }
 
 .subscribe__input {
-  position: absolute;
   width: 100%;
   height: 100%;
   padding-left: 33px;
   padding-right: 75px;
+}
+
+.subscribe__input-group {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   border: none;
   font-weight: 300;
   font-size: 14px;
@@ -1617,9 +1640,14 @@ template {
 }
 
 .footer__input {
+  width: 100%;
+}
+
+.footer__input-group {
   margin-bottom: 15px;
   -ms-flex-preferred-size: 47%;
       flex-basis: 47%;
+  position: relative;
 }
 
 .footer__message {
@@ -1762,13 +1790,18 @@ template {
 
 .modal__input {
   width: 100%;
-  margin-bottom: 15px;
+}
+
+.modal__input-group {
+  width: 100%;
+  margin-top: 15px;
+  position: relative;
 }
 
 .modal__message {
   min-height: 123px;
   width: 100%;
-  margin-bottom: 15px;
+  margin: 15px 0;
 }
 
 .modal__info {
@@ -1800,7 +1833,7 @@ template {
     -ms-grid-rows: (500px)[3];
         grid-template-rows: repeat(3, 500px);
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
@@ -2461,6 +2494,13 @@ template {
   }
   .modal__message {
     min-height: 80px;
+  }
+}
+
+@media (max-height: 520px) {
+  .modal__dialog {
+    overflow-y: auto;
+    height: 100%;
   }
 }
 /*# sourceMappingURL=style.css.map */
