--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -54,6 +54,7 @@
     font-size: 12px
     line-height: 15px
     color: $text-color
+    outline: none
   &__button
     position: absolute
     width: 65px
