--- a/sass/templates/_hotel.sass
+++ b/sass/templates/_hotel.sass
@@ -187,7 +187,8 @@
     font-size: 14px
     line-height: 19px
 .map
-  width: 340px
+  width: 100%
   height: 210px
   border-radius: 10px
   overflow: hidden
+  border: none
