--- a/sass/templates/_newsletter.sass
+++ b/sass/templates/_newsletter.sass
@@ -40,15 +40,18 @@
   border-radius: 4px
   overflow: hidden
   &__input
-    position: absolute
     width: 100%
     height: 100%
     padding-left: 33px
     padding-right: 75px
-    border: none
-    font-weight: 300
-    font-size: 14px
-    line-height: 18px
+    &-group
+      position: absolute
+      width: 100%
+      height: 100%
+      border: none
+      font-weight: 300
+      font-size: 14px
+      line-height: 18px
   &__button
     position: absolute
     top: 0
@@ -62,4 +65,3 @@
     line-height: 15px
     color: $light
     cursor: pointer
-    
