--- a/sass/templates/_packages.sass
+++ b/sass/templates/_packages.sass
@@ -146,7 +146,7 @@
     display: block
     margin-top: 0
     margin-bottom: 41px
-    overflow: hidden
+    overflow: auto
   &__person
     margin-bottom: 30px
   &__rating
