--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,16 @@ img {
 
 input.invalid {
   border: 1px solid #EC1F46;
+  -webkit-animation-name: shake;
+          animation-name: shake;
+  -webkit-animation-duration: 0.8s;
+          animation-duration: 0.8s;
+  -webkit-transform-origin: 50% 50%;
+          transform-origin: 50% 50%;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
 }
 
 label.invalid {
@@ -77,6 +87,100 @@ label.invalid {
   font-weight: 700;
   overflow: auto;
   height: 15px;
+}
+
+@-webkit-keyframes shake {
+  0% {
+    translate(2px, 1px) rotate(0deg) {
+    }
+  }
+  10% {
+    translate(-1px, -2px) rotate(-1deg) {
+    }
+  }
+  20% {
+    translate(-3px, 0px) rotate(1deg) {
+    }
+  }
+  30% {
+    translate(0px, 2px) rotate(0deg) {
+    }
+  }
+  40% {
+    translate(1px, -1px) rotate(1deg) {
+    }
+  }
+  50% {
+    translate(-1px, 2px) rotate(-1deg) {
+    }
+  }
+  60% {
+    translate(-3px, 1px) rotate(0deg) {
+    }
+  }
+  70% {
+    translate(2px, 1px) rotate(-1deg) {
+    }
+  }
+  80% {
+    translate(-1px, -1px) rotate(1deg) {
+    }
+  }
+  90% {
+    translate(2px, 2px) rotate(0deg) {
+    }
+  }
+  100% {
+    translate(1px, -2px) rotate(-1deg) {
+    }
+  }
+}
+
+@keyframes shake {
+  0% {
+    translate(2px, 1px) rotate(0deg) {
+    }
+  }
+  10% {
+    translate(-1px, -2px) rotate(-1deg) {
+    }
+  }
+  20% {
+    translate(-3px, 0px) rotate(1deg) {
+    }
+  }
+  30% {
+    translate(0px, 2px) rotate(0deg) {
+    }
+  }
+  40% {
+    translate(1px, -1px) rotate(1deg) {
+    }
+  }
+  50% {
+    translate(-1px, 2px) rotate(-1deg) {
+    }
+  }
+  60% {
+    translate(-3px, 1px) rotate(0deg) {
+    }
+  }
+  70% {
+    translate(2px, 1px) rotate(-1deg) {
+    }
+  }
+  80% {
+    translate(-1px, -1px) rotate(1deg) {
+    }
+  }
+  90% {
+    translate(2px, 2px) rotate(0deg) {
+    }
+  }
+  100% {
+    translate(1px, -2px) rotate(-1deg) {
+    }
+  }
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -1385,6 +1489,24 @@ template {
   padding-bottom: 98px;
 }
 
+.activities__card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 255px;
+  height: 255px;
+  -webkit-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+}
+
 .activities__title {
   font-style: normal;
   font-weight: bold;
@@ -1409,19 +1531,6 @@ template {
 }
 
 .card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  position: relative;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  width: 255px;
-  height: 255px;
   padding: 24px 26px;
   border-radius: 6px;
   overflow: hidden;
@@ -1760,8 +1869,8 @@ template {
   max-width: 478px;
   visibility: hidden;
   opacity: 0;
-  -webkit-transition: opacity 0.2s;
-  transition: opacity 0.2s;
+  -webkit-transition: opacity 1s;
+  transition: opacity 1s;
 }
 
 .modal__dialog_visible {
@@ -1825,7 +1934,7 @@ template {
        object-fit: cover;
     max-width: 700px;
   }
-  .card {
+  .activities__card {
     width: 230px;
     height: 230px;
   }
@@ -1918,10 +2027,10 @@ template {
   }
   .activities__card {
     margin-bottom: 20px;
-  }
-  .card {
     width: 339px;
     height: 255px;
+  }
+  .activities .card {
     padding: 24px 110px 24px 26px;
   }
   .footer {
@@ -2234,8 +2343,10 @@ template {
   .activities__title {
     margin-bottom: 36px;
   }
-  .card {
+  .activities__card {
     width: 100%;
+  }
+  .card {
     padding-right: 45px;
     padding-bottom: 15px;
   }
@@ -2501,6 +2612,13 @@ template {
   .modal__dialog {
     overflow-y: auto;
     height: 100%;
+  }
+}
+
+@media (min-width: 992px) {
+  .activities__card:hover {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
   }
 }
 /*# sourceMappingURL=style.css.map */
