--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -41,6 +41,11 @@ img
   flex-wrap: wrap
 input.invalid
   border: 1px solid $primary
+  animation-name: shake
+  animation-duration: 0.8s
+  transform-origin: 50% 50%
+  animation-iteration-count: infinite
+  animation-timing-function: linear
 label.invalid
   color: $primary
   text-decoration: underline
@@ -51,3 +56,26 @@ label.invalid
   font-weight: 700
   overflow: auto
   height: 15px
+@keyframes shake
+  0%
+    translate(2px, 1px) rotate(0deg)
+  10%
+    translate(-1px, -2px) rotate(-1deg)
+  20%
+    translate(-3px, 0px) rotate(1deg)
+  30%
+    translate(0px, 2px) rotate(0deg)
+  40%
+    translate(1px, -1px) rotate(1deg)
+  50%
+    translate(-1px, 2px) rotate(-1deg)
+  60%
+    translate(-3px, 1px) rotate(0deg)
+  70%
+    translate(2px, 1px) rotate(-1deg)
+  80%
+    translate(-1px, -1px) rotate(1deg)
+  90%
+    translate(2px, 2px) rotate(0deg)
+  100%
+    translate(1px, -2px) rotate(-1deg)
